assets/error.txt
error[E0277]: the trait bound `models::UserRole: diesel::Expression` is not satisfied
  --> src/models.rs:39:10
   |
39 | #[derive(Insertable, Serialize, Deserialize)]
   |          ^^^^^^^^^^ the trait `diesel::Expression` is not implemented for `models::UserRole`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 173 others
   = note: required for `models::UserRole` to implement `diesel::expression::AsExpression<schema::sql_types::UserRole>`
   = note: this error originates in the derive macro `Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `models::UserRole: diesel::Expression` is not satisfied
  --> src/models.rs:39:10
   |
39 | #[derive(Insertable, Serialize, Deserialize)]
   |          ^^^^^^^^^^ the trait `diesel::Expression` is not implemented for `models::UserRole`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 173 others
   = note: required for `&'insert models::UserRole` to implement `diesel::Expression`
   = note: required for `&'insert models::UserRole` to implement `diesel::expression::AsExpression<schema::sql_types::UserRole>`
   = note: this error originates in the derive macro `Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `models::UserRole: diesel::Expression` is not satisfied
  --> src/models.rs:47:9
   |
47 |     pub role: UserRole,
   |         ^^^^ the trait `diesel::Expression` is not implemented for `models::UserRole`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 173 others
   = note: required for `models::UserRole` to implement `diesel::expression::AsExpression<schema::sql_types::UserRole>`

error[E0277]: the trait bound `models::UserRole: diesel::Expression` is not satisfied
  --> src/models.rs:47:9
   |
47 |     pub role: UserRole,
   |         ^^^^ the trait `diesel::Expression` is not implemented for `models::UserRole`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 173 others
   = note: required for `&'insert models::UserRole` to implement `diesel::Expression`
   = note: required for `&'insert models::UserRole` to implement `diesel::expression::AsExpression<schema::sql_types::UserRole>`

